[gd_scene load_steps=8 format=3]

[ext_resource type="StyleBox" path="res://node_element/node_element.tres" id="1_tic43"]
[ext_resource type="StyleBox" path="res://node_element/node_element_title_bar.tres" id="2_m3uhc"]
[ext_resource type="Script" path="res://cage_plus/cage_plus.gd" id="3_tekmy"]
[ext_resource type="PackedScene" path="res://node_element/one_line_field.tscn" id="4_h2qs1"]
[ext_resource type="Script" path="res://node_element/one_line_field.gd" id="5_owadf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2kkl"]
bg_color = Color(0.998417, 0.182963, 0.249426, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
expand_margin_top = 3.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d26xn"]
content_margin_left = 2.0
content_margin_top = 4.0
content_margin_right = 2.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="cage_2" type="GraphNode" groups=["cage"]]
layout_mode = 0
offset_left = 1040.0
offset_top = 680.0
offset_right = 1192.0
offset_bottom = 940.0
mouse_filter = 1
theme_override_styles/panel = ExtResource("1_tic43")
theme_override_styles/panel_selected = ExtResource("1_tic43")
theme_override_styles/titlebar = ExtResource("2_m3uhc")
theme_override_styles/titlebar_selected = SubResource("StyleBoxFlat_e2kkl")
position_offset = Vector2(1040, 680)
title = "Cage ID"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = true
slot/2/left_type = 0
slot/2/left_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/2/left_icon = null
slot/2/right_enabled = true
slot/2/right_type = 0
slot/2/right_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 0
slot/3/left_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/3/left_icon = null
slot/3/right_enabled = true
slot/3/right_type = 0
slot/3/right_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
slot/4/left_enabled = true
slot/4/left_type = 0
slot/4/left_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/4/left_icon = null
slot/4/right_enabled = true
slot/4/right_type = 0
slot/4/right_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/4/right_icon = null
slot/4/draw_stylebox = true
slot/5/left_enabled = true
slot/5/left_type = 0
slot/5/left_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/5/left_icon = null
slot/5/right_enabled = true
slot/5/right_type = 0
slot/5/right_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/5/right_icon = null
slot/5/draw_stylebox = true
slot/6/left_enabled = true
slot/6/left_type = 0
slot/6/left_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/6/left_icon = null
slot/6/right_enabled = true
slot/6/right_type = 0
slot/6/right_color = Color(0.133333, 0.133333, 0.133333, 1)
slot/6/right_icon = null
slot/6/draw_stylebox = true
script = ExtResource("3_tekmy")

[node name="cage_id" type="LineEdit" parent="." instance=ExtResource("4_h2qs1")]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_d26xn")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_owadf")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "# # # # # # # # #"
horizontal_alignment = 1

[node name="subject_1" type="LineEdit" parent="." instance=ExtResource("4_h2qs1")]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_d26xn")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_owadf")

[node name="subject_2" type="LineEdit" parent="." instance=ExtResource("4_h2qs1")]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_d26xn")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_owadf")

[node name="subject_3" type="LineEdit" parent="." instance=ExtResource("4_h2qs1")]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_d26xn")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_owadf")

[node name="subject_4" type="LineEdit" parent="." instance=ExtResource("4_h2qs1")]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_d26xn")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_owadf")

[node name="subject_5" type="LineEdit" parent="." instance=ExtResource("4_h2qs1")]
layout_mode = 2
theme_override_colors/font_color = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_d26xn")
alignment = 1
context_menu_enabled = false
virtual_keyboard_enabled = false
clear_button_enabled = true
caret_blink = true
script = ExtResource("5_owadf")

[connection signal="text_changed" from="cage_id" to="." method="_on_cage_id_text_changed"]
[connection signal="text_changed" from="subject_1" to="." method="_on_subject_1_text_changed"]
[connection signal="text_changed" from="subject_2" to="." method="_on_subject_2_text_changed"]
[connection signal="text_changed" from="subject_3" to="." method="_on_subject_3_text_changed"]
[connection signal="text_changed" from="subject_4" to="." method="_on_subject_4_text_changed"]
[connection signal="text_changed" from="subject_5" to="." method="_on_subject_5_text_changed"]
